--- a/docs/2.19.x/concepts/deployments.mdx
+++ b/docs/2.19.x/concepts/deployments.mdx
@@ -120,7 +120,7 @@ from prefect.deployments import run_deployment
 
 @flow
 def my_flow():
-    # The scheduled flow run will not be linked to this flow as a nested flow.
+    # The scheduled flow run will not be linked to this flow run
     run_deployment(name="my_other_flow/my_deployment_name", as_subflow=False)
 
 ```
