--- a/docs/2.19.x/how-to-guides/development/specify-upstream-dependencies.mdx
+++ b/docs/2.19.x/how-to-guides/development/specify-upstream-dependencies.mdx
@@ -105,7 +105,7 @@ Flow run 'statuesque-waxbill' - Finished in state Completed('All states complete
 Determination methods
 -----------------------------------------------------------------
 
-A task or nested flow's upstream dependencies can be inferred automatically via its inputs, or stated explicitly via the `wait_for` parameter.
+A run's upstream dependencies can be inferred automatically via its inputs, or stated explicitly via the `wait_for` parameter.
 
 ### Automatic
 
