--- a/docs/2.19.x/concepts/tasks.mdx
+++ b/docs/2.19.x/concepts/tasks.mdx
@@ -13,7 +13,7 @@ Tasks are special because they receive metadata about upstream dependencies and 
 
 Tasks also take advantage of automatic Prefect [logging](https://docs.prefect.io/concepts/logs/) to capture details about task runs such as runtime, tags, and final state.
 
-You can define your tasks within the same file as your flow definition, or you can define tasks within modules and import them for use in your flow definitions. Tasks may be called from within a flow, from within a nested flow, or (as of `prefect 2.18.x`) from within another task.
+You can define your tasks within the same file as your flow definition, or you can define tasks within modules and import them for use in your flow definitions. Tasks may be called from within a flow, or (as of `prefect 2.18.x`) from within another task.
 
 **Calling a task from a flow**
 
