--- a/docs/2.19.x/concepts/flows.mdx
+++ b/docs/2.19.x/concepts/flows.mdx
@@ -15,7 +15,7 @@ Flows can be thought of as special types of functions. They can take inputs, per
 
 Flows also take advantage of automatic Prefect logging to capture details about [flow runs](#flow-runs) such as run time and final state.
 
-Flows can include calls to [tasks](https://docs.prefect.io/concepts/tasks/) as well as to other flows, which Prefect calls ["nested flows"](#composing-flows) in this context. Flows may be defined within modules and imported for use as nested flows in your flow definitions.
+Flows can include calls to [tasks](https://docs.prefect.io/concepts/tasks/) as well as to other flows, which Prefect calls ["nested flows"](#composing-flows) in this context. Flows may be defined within modules and imported for use in your flow definitions.
 
 [Deployments](https://docs.prefect.io/concepts/deployments/) elevate individual workflows from functions that you call manually to API-managed entities.
 
