--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -49,7 +49,7 @@ Your CLI is now authenticated with your Prefect Cloud account through a locally-
 
 If you have any issues with browser-based authentication, see the [Prefect Cloud docs](/3.0rc/manage/cloud/manage-users/api-keys/) to learn how to authenticate with a manually created API key.
   </Tab>
-  <Tab title="OSS">
+  <Tab title="Local server">
 1. Ensure your current profile isn't authenticated to Prefect Cloud:
 
    ```bash
@@ -146,7 +146,7 @@ Running a flow locally is a good start, but you should use a remote destination 
 A [work pool](/3.0rc/deploy/work-pools/control-runs/) is the most common way to do this.
 
 <Tabs>
-  <Tab title="Cloud">
+  <Tab title="Prefect Cloud">
 Deploy your flow to Cloud using a managed work pool.
 
 1. Create a [managed work pool](/3.0rc/deploy/serve-flows/index):
@@ -157,7 +157,7 @@ Deploy your flow to Cloud using a managed work pool.
 
 1. View your new work pool on the **Work Pools** page of the UI.
   </Tab>
-  <Tab title="OSS">
+  <Tab title="Local server">
 Deploy your flow to your local server using a Process type work pool.
 
 1. Create a Process type work pool:
