--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -72,7 +72,8 @@ The easiest way to convert a Python script into a workflow is to add a `@flow` d
 [Flows](/3.0rc/develop/write-flows/) are containers for workflow logic as code. 
 They core observable, orchestrated, deployable units of work in Prefect.
 
-You can also add `@task` decorators to the functions called by the flow to track and orchestrate them. Tasks are the smallest unit of observed and orchestrated work in Prefect.
+You can also add `@task` decorators to the functions called by the flow to track and orchestrate them. 
+Tasks are the smallest unit of observed and orchestrated work in Prefect.
 
 ```python my_gh_workflow.py
 import httpx   # an HTTP client library and dependency of Prefect
