--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -119,7 +119,7 @@ The `log_prints=True` argument provided to the `@flow` decorator logs output fro
 
 ## Run your flow
 
-Run your Prefect flow just as your would a Python script:
+Run your Prefect flow just as you would a Python script:
 
 ```bash
 python my_gh_workflow.py
