update docs references

--- a/docs/2.19.x/how-to-guides/work-pools/deploying-flows.mdx
+++ b/docs/2.19.x/how-to-guides/work-pools/deploying-flows.mdx
@@ -149,7 +149,7 @@ If you want to use a custom Dockerfile, you can specify the path to the Dockerfi
 
 ```python custom_dockerfile.py
 from prefect import flow
-from prefect.deployments import DeploymentImage
+from prefect.docker import DeploymentImage
 
 
 @flow(log_prints=True)
