--- a/docs/3.0rc/deploy/work-pools/control-runs.mdx
+++ b/docs/3.0rc/deploy/work-pools/control-runs.mdx
@@ -933,7 +933,7 @@ To use this functionality, write your deploy script like this:
 
 ```python example_deploy_script.py
 from prefect import flow                                                       
-from prefect.deployments import DeploymentImage                                
+from prefect.docker import DeploymentImage                                
 
 
 @flow(log_prints=True)
