--- a/docs/2.19.x/tutorial/work-pools.mdx
+++ b/docs/2.19.x/tutorial/work-pools.mdx
@@ -257,7 +257,7 @@ To take advantage of this functionality, you can write your deploy script like t
 ```python example_deploy_script.py
 
 from prefect import flow                                                       
-from prefect.deployments import DeploymentImage                                
+from prefect.docker import DeploymentImage                                
 
 
 @flow(log_prints=True)
