--- a/docs/2.19.x/tutorial/workers.mdx
+++ b/docs/2.19.x/tutorial/workers.mdx
@@ -157,7 +157,7 @@ If you want to use a custom Dockerfile, you can specify the path to the Dockerfi
 ```python repo_info.py
 import httpx
 from prefect import flow
-from prefect.deployments import DeploymentImage
+from prefect.docker import DeploymentImage
 
 
 @flow(log_prints=True)
