--- a/docs/3.0rc/deploy/work-pools/control-runs.mdx
+++ b/docs/3.0rc/deploy/work-pools/control-runs.mdx
@@ -539,7 +539,7 @@ Below is a list of available worker types. Most worker types require installatio
 | [`azure-container-instance`](https://prefecthq.github.io/prefect-azure/container_instance_worker/) | Execute flow runs in ACI containers | `prefect-azure` |
 
 If you don’t see a worker type that meets your needs, consider 
-[developing a new worker type](/3.0rc/guides/deployment/developing-a-new-worker-type/).
+[developing a new worker type](/contribute/develop-a-new-worker-type/).
 
 ### Worker options
 
