--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -70,7 +70,7 @@ If you have any issues with browser-based authentication, see the [Prefect Cloud
 
 The easiest way to convert a Python script into a workflow is to add a `@flow` decorator to the script's entrypoint, the Python function that runs first.
 [Flows](/3.0rc/develop/write-flows/) are containers for workflow logic as code. 
-They core observable, orchestrated, deployable units of work in Prefect.
+They're the core observable, orchestrated, deployable units of work in Prefect.
 
 You can also add `@task` decorators to the functions called by the flow to track and orchestrate them. 
 Tasks are the smallest unit of observed and orchestrated work in Prefect.
