--- a/docs/contribute/dev-contribute.mdx
+++ b/docs/contribute/dev-contribute.mdx
@@ -1,5 +1,6 @@
 ---
 title: How to Contribute
+description: Learn how to set up Prefect for development.
 ---
 
 Thanks for contributing to Prefect!
