--- a/docs/contribute/dev-contribute.mdx
+++ b/docs/contribute/dev-contribute.mdx
@@ -1,9 +1,7 @@
 ---
 title: How to Contribute
-description: Learn how to set up Prefect for development.
+description: Learn how to set up Prefect for development and experimentation.
 ---
-
-Thanks for contributing to Prefect!
 
 ## Set up a development environment
 
