--- a/docs/3.0rc/develop/write-flows/index.mdx
+++ b/docs/3.0rc/develop/write-flows/index.mdx
@@ -297,7 +297,7 @@ However you run the flow, the Prefect API monitors the flow run, capturing flow 
 <Tip>
 **Logging**
 
-Prefect enables you to log a variety of useful information about your flow and task runs. You can capture information 
+Prefect enables you to log a variety of useful information about your flow and task runs. 
 about your workflows for purposes such as monitoring, troubleshooting, and auditing.
 Check out [Logging](/3.0rc/develop/observe-workflows/logging) for more information.
 </Tip>
