--- a/docs/3.0rc/develop/write-tasks/use-task-runners.mdx
+++ b/docs/3.0rc/develop/write-tasks/use-task-runners.mdx
@@ -261,7 +261,7 @@ Prefect task) but _not_ if you are passing the value to another task.
 
 ## Mapping over iterables
 
-Prefect also provides a `.map()` implementation that automatically submits a new task run for each element of its 
+Prefect also provides a `.map()` method that automatically submits a new task run for each element of its 
 input data. 
 This can be useful for easily submitting a lot of work to a task runner simultaneously.
 
