--- a/docs/integrations/prefect-dbt/index.mdx
+++ b/docs/integrations/prefect-dbt/index.mdx
@@ -206,7 +206,7 @@ if __name__ == "__main__":
     dbt_build_flow()
 ```
 
-To see all of the pre-built tasks, visit the SDK docs.
+See the [SDK docs](https://prefect-python-sdk-docs.netlify.app/prefect_dbt/) for other pre-built tasks.
 
 ### Create a summary artifact
 
