--- a/docs/integrations/prefect-dask/index.mdx
+++ b/docs/integrations/prefect-dask/index.mdx
@@ -5,6 +5,7 @@ description: Accelerate your workflows by running tasks in parallel with Dask
 
 Dask can run your tasks in parallel and distribute them over multiple machines.
 The `prefect-dask` integration makes it easy to accelerate your flow runs with Dask.
+
 To install `prefect-dask`, run:
 
 ```bash
@@ -118,7 +119,7 @@ if __name__ == "__main__":
 </Tabs>
 
 In our tests, the flow run took 15.2 seconds to execute sequentially.
-The version with `DaskTaskRunner` reduced the runtime to **5.7** seconds!
+Using the `DaskTaskRunner` reduced the runtime to **5.7** seconds!
 
 ## Run tasks on Dask
 
@@ -178,7 +179,7 @@ DaskTaskRunner(
 )
 ```
 
-For additional time savings with Dask, you could distribute larger workloads over multiple machines.
+For larger workloads, you can accelerate execution further by distributing task runs over multiple machines.
 
 ### Connect to an existing cluster
 
@@ -356,7 +357,7 @@ if __name__ == "__main__":
 ```
 
 
-## Resources
+## Additional Resources
 
 Refer to the prefect-dask API documentation linked in the sidebar to explore all the capabilities of the prefect-dask library.
 
