--- a/docs/3.0rc/develop/write-tasks/task-runners.mdx
+++ b/docs/3.0rc/develop/write-tasks/task-runners.mdx
@@ -1,6 +1,6 @@
 ---
 title: Run tasks concurrently or in parallel
-description: Learn how to use Prefect task runners for concurrent, parallel or distributed execution of tasks.
+description: Learn how to use task runners for concurrent, parallel or distributed execution of tasks.
 ---
 
 Task runners are not required for task execution. 
